--- a/src/main/java/valuts/Monitor.form
+++ b/src/main/java/valuts/Monitor.form
@@ -15,7 +15,7 @@
           <grid row="0" column="0" row-span="1" col-span="2" vsize-policy="0" hsize-policy="0" anchor="8" fill="0" indent="0" use-parent-layout="false"/>
         </constraints>
         <properties>
-          <text value="Label"/>
+          <text value="запрос курса..."/>
         </properties>
       </component>
       <vspacer id="6c76e">
@@ -28,7 +28,7 @@
           <grid row="1" column="0" row-span="1" col-span="1" vsize-policy="0" hsize-policy="0" anchor="8" fill="0" indent="0" use-parent-layout="false"/>
         </constraints>
         <properties>
-          <text value="Label"/>
+          <text value="запрос курса..."/>
         </properties>
       </component>
     </children>
